Correct tests and minor tidies